reformat code in cdconcretization